--- a/dailynews.html
+++ b/dailynews.html
@@ -1,6 +1,6 @@
 <script>
     const
-        app_title = "Dailynews 70",
+        app_title = "Dailynews 71",
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
@@ -387,7 +387,10 @@
                 if (article) {
                     if (typeof whitelist_morningbrew == "number")
                         whitelist_morningbrew = whitelist_morningbrew = {};
-                    whitelist_morningbrew[issue] = article.title;
+                    if (typeof whitelist_morningbrew == "string")
+                        whitelist_morningbrew = article.title;
+                    else if (typeof whitelist_morningbrew == "object")
+                        whitelist_morningbrew[issue] = article.title;
                 }
                 if (articles.length == issues_alias.length) {
                     loaded_datas[main_title] = articles.length == 1 ? articles[0] : (articles);
