--- a/dailynews.html
+++ b/dailynews.html
@@ -1,6 +1,6 @@
 <script>
     const
-        app_title = "Dailynews 71",
+        app_title = "Dailynews 72",
         api_key = "AIzaSyCUyUlEcT2eul0-_5k6X15WN_d3Mgu_jrM",
         client_id = "509723180239-df84foq7m5lc2g158sqdqnb9ummdphhl.apps.googleusercontent.com",
         client_secret = "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",
@@ -31,7 +31,6 @@
         ],
         link_list = [
             [process_quote, "Trích dẫn hằng ngày"],
-            [process_wikipedia, "Wikipedia"],
             [process_ytb, "YouTube"],
             [process_morningbrew, "Morning Brew"],
             [process_stackoverflow, "The Overflow"],
@@ -39,6 +38,7 @@
             ["topics/CAAqJggKIiBDQkFTRWdvSUwyMHZNRFZxYUdjU0FuWnBHZ0pXVGlnQVAB", "Tin tức chung"],
         ];
 
+    //[process_wikipedia, "Wikipedia"],
     //[process_manhhomienbienthuy, "Blog manhhomienbienthuy"],
     //[(main_title, callback) => process_weather(callback), "Dự báo thời tiết"],
     //[(main_title, callback) => process_tinhte("https://tinhte.vn/rss", main_title, callback), "Tinh tế"],
